[project]
name = "github-tools-suite"
description = "GitHub工具合集 - 一站式GitHub访问优化解决方案"
version = "1.0.0"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GitHub Tools Suite", email = "support@example.com"}
]
keywords = ["github", "tools", "dns", "hosts", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
github-tools = "main_gui:main"

[project.optional-dependencies]
dev = [
    "flake8>=6.0",
    "black>=23.0",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
